@@ -19,5 +19,7 @@ import java.util.List;
  */
 public class ConstructorConfiguration extends ConfigurationElement
 {
+	private static final long serialVersionUID = 1L;
+	
 	public List<ParameterConfiguration> parameterConfigurations;
 }
